[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/actors/objects/pipe/pipe_enter_logic/pipe_enter_logic.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/pipe/fast_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/actors/objects/pipe/sound.wav" type="AudioStream" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="PipeEnterLogic" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="GPArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GPArea"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioFast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="tween_all_completed" from="Tween" to="." method="_tween_all_completed"]
